abc042/C/er
./main.cpp: In function 'void sub()':
./main.cpp:1562:22: error: 'x' was not declared in this scope
 1562 |                 if(v[x])
      |                      ^
